samples/_failures_safe/1761801447_3b1714_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97a4c9be.c: In function ‘main’:
./samples/SAFE/__tmp_97a4c9be.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("Total entries: %d\n", log_count);
      |     ^~~~~~
